plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.grupo3'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // JWT (JJWT)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // Jakarta
    implementation 'org.springframework.boot:spring-boot-starter-validation'


    // Testing (unit/integration)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'    // JUnit 5, Mockito, AssertJ, etc.
    testImplementation 'org.springframework.security:spring-security-test'    // Helpers de Spring Security
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'              // Requerido por Gradle para JUnit Platform
    testImplementation 'org.mockito:mockito-junit-jupiter'                    // Extensión Mockito + JUnit 5
    testImplementation 'org.assertj:assertj-core'                             // Aserciones fluidas
    testImplementation 'com.h2database:h2'                                    // BD en memoria para tests

}

tasks.named('test') {
    useJUnitPlatform()
}
